@@ -74,9 +74,11 @@ constexpr std::add_const_t<T>& qAsConst(T& t) noexcept {
 // define number locale from setting (using system locale when QLocale::AnyLanguage)
 #define SET_NUMBER_LOCALE \
 QLocale::Language numberLocaleLanguage = static_cast<QLocale::Language>(KSharedConfig::openConfig()->group("Settings_General").readEntry( QLatin1String("DecimalSeparatorLocale"), static_cast<int>(QLocale::Language::AnyLanguage) )); \
+QLocale::NumberOptions numberOptions = static_cast<QLocale::NumberOptions>(KSharedConfig::openConfig()->group("Settings_General").readEntry( QLatin1String("NumberOptions"), static_cast<int>(QLocale::DefaultNumberOptions) )); \
 QLocale numberLocale(numberLocaleLanguage == QLocale::AnyLanguage ? QLocale() : numberLocaleLanguage); \
-if (numberLocale.language() == QLocale::Language::C) \
-	numberLocale.setNumberOptions(QLocale::DefaultNumberOptions);
+numberLocale.setNumberOptions(numberOptions);
+//if (numberLocale.language() == QLocale::Language::C)
+//	numberLocale.setNumberOptions(QLocale::DefaultNumberOptions);
 
 //////////////////////// LineEdit Access ///////////////////////////////
 #define SET_INT_FROM_LE(var, le) { \
